# thashi

./: pyproject.toml
thashi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
