[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thashi"
version = "0.0.1"
authors = [
  { name= "thashi", email="thashi2309.tk@gmail.com" },
]
description = "Simple math library"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]